:bug: 작성 컨테스트 저장하는 서비스, 매퍼로직 수정

--- a/src/main/resources/templates/list/applicationWrite.html
+++ b/src/main/resources/templates/list/applicationWrite.html
@@ -71,7 +71,7 @@
                                     <span class="Image">
                                         <i class="fa-regular fa-pen-to-square"></i>
                                     </span>
-                                    <div class="inputText">텍스트 추가</div>
+                                    <div class="inputText" name="applyContent">텍스트 추가</div>
                                 </div>
                             </div>
                         </div><!--applyInput-->
