:recycle: 로그인 이후 접근 가능하도록 'users' 추가 및 REST API 네이밍 규칙에 맞춰 'api' 추가

--- a/src/main/resources/templates/list/applicationWrite.html
+++ b/src/main/resources/templates/list/applicationWrite.html
@@ -42,7 +42,7 @@
             
             
             <section>
-                <form action="/contest/application/upload" method="post">
+                <form>
                     <div class="applyContent">
                         <input type="text" name="applyTitle" placeholder="제목을 입력해주세요." required>
                         <div class="contArea">
