--- a/src/main/resources/templates/list/applicationWrite.html
+++ b/src/main/resources/templates/list/applicationWrite.html
@@ -64,7 +64,7 @@
                                         <div class="inputText">이미지 추가</div>
                                     </div>
                                 </label>
-                                <input type="file" name="" id="image" multiple>
+                                <input type="file" name="file" id="image" multiple>
                             </div>
                             <div class="InputArea">
                                 <div class="content text" th:onclick="addText()">
