--- a/src/main/resources/templates/notifications/eventList.html
+++ b/src/main/resources/templates/notifications/eventList.html
@@ -23,12 +23,16 @@
                 <a th:href="@{/event/detail(eventNum=${event.eventNum})}" class="card-link">
                     <div class="card h-100">
                         <img th:src="${event.eventImageName != null ? event.eventImageName : '@{/img/fragments/이미지제공안됨.png}'}"
-                             class="card-img-top">
+                             class="card-img-top" alt="이벤트 이미지">
                         <div class="card-body">
                             <h5 class="card-title" th:text="${event.eventTitle}">이벤트 제목</h5>
                             <p class="card-text" th:text="${event.eventContent}">이벤트 설명입니다.</p>
                             <p class="card-text">
-                                <small class="text-muted" th:text="'등록일: ' + ${event.formattedCreateTime}"></small>
+                                <small class="text-muted">
+                                    <span th:text="'생성일: ' + ${event.formattedCreateTime}"></span><br>
+                                    <span th:text="'이벤트 기간: ' + ${event.formattedStartDate} + ' ~ ' + ${event.formattedEndDate}"></span>
+                                </small>
+
                             </p>
                             <!-- 삭제 버튼 -->
                             <form th:action="@{/event/admin/delete(eventNum=${event.eventNum})}" method="post" class="d-inline">
