--- a/src/main/resources/templates/notifications/eventWrite.html
+++ b/src/main/resources/templates/notifications/eventWrite.html
@@ -13,7 +13,7 @@
         <h1 class="text-center mb-4" th:text="${eventDTO.eventNum != null ? '이벤트 수정' : '이벤트 등록'}">이벤트 등록</h1>
 
         <!-- 이벤트 등록/수정 폼 -->
-        <form id="eventForm" th:action="@{/event/admin/create}" method="post">
+        <form id="eventForm" th:action="@{/event/admin/create}" method="post" enctype="multipart/form-data">
 
             <!-- 이벤트 제목 -->
             <div class="mb-3">
@@ -58,8 +58,8 @@
             <div class="mb-3">
                 <label for="eventImageUrl">이벤트 이미지</label>
                 <input type="file" id="eventImageUrl" name="file" class="form-control">
-                <div th:if="${eventDTO != null && eventDTO.eventImageName != null}" class="mt-2">
-                    <img th:src="${eventDTO.eventImageName}" alt="이벤트 이미지" class="img-thumbnail" width="200">
+                <div th:if="${eventDTO.eventImageName != null}" class="mt-2">
+                    <img th:src="@{${eventDTO.eventImageName}}" alt="이벤트 이미지" class="img-thumbnail" width="200">
                 </div>
             </div>
 
@@ -69,7 +69,7 @@
 
                 <!-- 등록/수정 버튼 -->
                 <button type="submit" class="btn btn-primary"
-                        th:text="${eventDTO != null && eventDTO.eventNum != null ? '수정' : '등록'}"></button>
+                        th:text="${eventDTO.eventNum != null ? '수정' : '등록'}"></button>
             </div>
         </form>
     </div>
